Fix spacing around id highlighter

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body {
     font-style: inherit;
     font: inherit;
     color: darksalmon;
+    padding: .1em;
 }
 
 .chat-prefix-user {
@@ -21,6 +22,7 @@ body {
     font-style: inherit;
     font: inherit;
     color: cadetblue;
+    padding: .1em;
 }
 
 .convoinput {
